--- a/portfolio-react-app/src/index.css
+++ b/portfolio-react-app/src/index.css
@@ -16,29 +16,40 @@
         @apply cursor-pointer
        
     }
-    li:hover{
-        @apply border-4; 
-        @apply border-white; 
-        @apply bg-white;
-        @apply text-black
-     
-        
-    }
+   
 
 }
-
+.menu-items:hover{
+    color: white;
+    border-bottom: 4px solid white;
+    
+}
 .content-div{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 400px;
 }
-
-.content-div:hover {
-    opacity: .5!important;
+.work-title:hover{
+ opacity: 1;
 }
+.content-div:hover {
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    opacity: .3 ;
+}
+
 .navBar{
     border-bottom: solid .2rem;
     border-image: linear-gradient(to left, #743ad5, #d53a9d) 1;
-
 }
+
+.home-bg{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
