--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,35 @@
 
 }
 
+.icons-footer{
+    font-size: 55px;
+    color: grey;
+    margin-top: 2%;
+}
+
+.linkedin:hover{
+    font-size: 60px;
+    transition: .06s;
+    color: white;
+}
+
+.github:hover{
+    font-size: 60px;
+    transition: .06s;
+    color: white;
+}
+.google:hover{
+    font-size: 60px;
+    transition: .06s;
+    color: white;
+}
+.resume:hover{
+    font-size: 60px;
+    transition: .06s;
+    color: white;
+}
+
+
 .content-div{
     background-repeat: no-repeat;
     background-size: cover;
