--- a/src/index.css
+++ b/src/index.css
@@ -2,75 +2,101 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Squada+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Changa:wght@500&family=Squada+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Squada+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Changa:wght@500&family=Squada+One&display=swap");
 
 @layer base {
-    body {
-        @apply font-[Changa];
-        @apply bg-slate-900;
-    }
-    li{
-        @apply px-4;
-        @apply text-slate-400;
-        @apply cursor-pointer
-    }
-    li:hover{
-        @apply text-white
-       
-    }
-   
-
+  body {
+    @apply font-[Changa];
+    @apply bg-slate-900;
+  }
+  li {
+    @apply px-4;
+    @apply text-slate-400;
+    @apply cursor-pointer;
+  }
 }
-
-
-.icons-footer{
-    font-size: 40px;
-    color: grey;
+input:focus, textarea {
+    outline: none !important;
 }
-
-
-
-.content-div{
-    background-size: 90% 90%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 400px;
+li{ 
+    transition: 500ms;
+}
+li:hover{ 
+  color: white;
+}
+.icons-footer {
+  font-size: 40px;
+  color: grey;
+}
+.content-div {
+  background-size: 90% 90%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+}
+.webdeveloper {
+  width: 300px;
+  height: 300px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgb(189, 189, 189);
+  border-radius: 50%;
+  border: 5px solid white;
 }
 
 .content-div:hover {
-    transition: .3s;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 400px;
-    opacity: .5;
+  transition: 0.3s;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  opacity: 0.5;
+}
+.navBar{ 
+    background: linear-gradient(to left, #10192d, transparent 250%);
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(3px); 
 }
 
-.navBar{
-    border-bottom: solid .2rem;
-    border-image: linear-gradient(to left, #743ad5, #d53a9d) 1;
+.email-icon, .phone-icon{ 
+    font-size: 1.55rem;
+    color: #10192d ;
 }
-
-.home-bg{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.home-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 @media screen and (max-width: 850px) {
-    .content-div{
-    
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-size: 100% 100%;
-        background-position: center;
-        height: 400px;
+    .labels-container{ 
+        flex-direction: column;
+       align-items: center;
     }
+    .labels-container > div{ 
+        width: 100%;
+        margin: 5px !important;
+    }
+    .webdeveloper{ 
+        margin-bottom: 20px;
+    }
+    .home-container{ 
+        flex-direction: column-reverse;
+    }
+  .content-div {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-size: 100% 100%;
+    background-position: center;
+    height: 400px;
+  }
 
-    .content-div:hover{
-        background-size: 100% 100%;
-    }
+  .content-div:hover {
+    background-size: 100% 100%;
+  }
 }
